# RAM-DigitalTwin

./: CMakeLists.txt
include/: AddFaultDialog.h  InfoWindow.h  MainWindow.h  Memory.h  TestWindow.h  Tests.h
src/: AddFaultDialog.cpp  InfoWindow.cpp  MainWindow.cpp  Memory.cpp  TestWindow.cpp  Tests.cpp  main.cpp
